crates/flotilla-crew/src/snapshots/flotilla_core__in_process__tests__escalation.snap
---
source: crates/flotilla-core/src/in_process/tests.rs
expression: "frame_crew_message(&sender, \"Example message.\")"
---
[flotilla · escalated from coder@work · supervise the stalled crew]

Example message.
