crates/flotilla-crew/src/snapshots/flotilla_core__in_process__tests__governor.snap
---
source: crates/flotilla-core/src/in_process/tests.rs
expression: "frame_crew_message(&sender, \"Example message.\")"
---
[governor wheelhouse · guidance for your stalled work · reply by running `crew complete`]

Example message.
